--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,6 +28,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@remix-run/react": "^2.8.0",
     "@remix-run/server-runtime": "^2.8.0",
@@ -41,6 +43,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "country-flag-icons": "^1.5.11",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
@@ -49,6 +52,7 @@
     "isbot": "^3.8.0",
     "lucide-react": "^0.376.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.8.2",
