--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "typecheck": "tsc --noEmit",
     "codegen": "shopify hydrogen codegen",
-    "generate": "graphql-codegen -r dotenv/config --config codegen.ts"
+    "generate": "graphql-codegen -r dotenv/config --config codegen.ts",
+    "get": "curl http://localhost:3000/api/submit"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
+    "@notionhq/client": "^2.2.15",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -43,7 +46,6 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "country-flag-icons": "^1.5.11",
-    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
@@ -58,6 +60,7 @@
     "react-intersection-observer": "^9.8.2",
     "react-use": "^17.5.0",
     "remix-flat-routes": "^0.6.4",
+    "remix-hook-form": "^4.3.1",
     "schema-dts": "^1.1.2",
     "tailwind-merge": "^2.3.0",
     "vaul": "^0.9.0",
@@ -81,6 +84,7 @@
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/eslint": "^8.4.10",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.164.0",
