--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "version": "1.0.7",
   "type": "module",
   "scripts": {
-    "build": "shopify hydrogen build",
+    "build": "yarn partytown && shopify hydrogen build",
     "dev": "shopify hydrogen dev --codegen --debug",
     "preview": "npm run build && shopify hydrogen preview",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .js,.ts,.jsx,.tsx .",
     "typecheck": "tsc --noEmit",
     "codegen": "shopify hydrogen codegen",
     "generate": "graphql-codegen -r dotenv/config --config codegen.ts",
-    "get": "curl http://localhost:3000/api/submit"
+    "get": "curl http://localhost:3000/api/submit",
+    "partytown": "partytown copylib public/~partytown"
   },
   "prettier": "@shopify/prettier-config",
   "dependencies": {
+    "@builder.io/partytown": "^0.10.2",
     "@emailjs/browser": "^4.3.3",
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
