--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@remix-run/react": "^2.8.0",
     "@remix-run/server-runtime": "^2.8.0",
     "@sentry/react": "^7.111.0",
+    "@sentry/remix": "^8.7.0",
+    "@sentry/vite-plugin": "^2.17.0",
     "@shopify/cli": "3.58.0",
     "@shopify/cli-hydrogen": "^8.0.0",
     "@shopify/hydrogen": "2024.4.0",
