--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@remix-run/react": "^2.8.0",
+    "@remix-run/react": "2.9.2",
     "@remix-run/server-runtime": "^2.8.0",
     "@sentry/react": "^8.11.0",
     "@sentry/remix": "^8.7.0",
     "@sentry/vite-plugin": "^2.17.0",
     "@shopify/cli": "3.63.0",
-    "@shopify/cli-hydrogen": "^8.0.0",
+    "@shopify/cli-hydrogen": "8.1.1",
     "@shopify/hydrogen": "2024.4.7",
-    "@shopify/remix-oxygen": "^2.0.4",
+    "@shopify/remix-oxygen": "2.0.4",
     "@thebeyondgroup/shopify-rich-text-renderer": "^2.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
@@ -66,6 +66,7 @@
     "remix-hook-form": "^5.0.1",
     "schema-dts": "^1.1.2",
     "tailwind-merge": "^2.3.0",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.0",
     "zod": "^3.23.5"
   },
@@ -90,7 +91,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "eslint": "^9.5.0",
+    "eslint": "^8.20.0",
     "eslint-plugin-hydrogen": "0.12.3",
     "intl-parse-accept-language": "^1.0.0",
     "postcss-preset-env": "^9.5.9",
@@ -99,7 +100,7 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.2",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.1"
   },
