--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/body-scroll-lock": "^3.1.2",
     "@types/eslint": "^8.4.10",
+    "@types/gtag.js": "^0.0.20",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
