--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "@sentry/react": "^8.11.0",
     "@sentry/remix": "^8.7.0",
     "@sentry/vite-plugin": "^2.17.0",
-    "@shopify/cli": "3.63.0",
+    "@shopify/cli": "3.68.0",
     "@shopify/cli-hydrogen": "8.1.1",
-    "@shopify/hydrogen": "2024.4.7",
-    "@shopify/remix-oxygen": "2.0.4",
+    "@shopify/hydrogen": "2024.7.9",
+    "@shopify/remix-oxygen": "2.0.8",
     "@thebeyondgroup/shopify-rich-text-renderer": "^2.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
@@ -80,8 +80,8 @@
     "@remix-run/dev": "^2.8.0",
     "@remix-run/eslint-config": "^2.8.0",
     "@shopify/hydrogen-codegen": "^0.3.0",
-    "@shopify/mini-oxygen": "^3.0.0",
-    "@shopify/oxygen-workers-types": "^4.0.0",
+    "@shopify/mini-oxygen": "3.0.6",
+    "@shopify/oxygen-workers-types": "4.1.2",
     "@shopify/prettier-config": "^1.1.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
