--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@remix-run/react": "2.9.2",
-    "@remix-run/server-runtime": "^2.8.0",
+    "@remix-run/react": "2.10.1",
+    "@remix-run/server-runtime": "2.10.1",
     "@sentry/react": "^8.11.0",
     "@sentry/remix": "^8.7.0",
     "@sentry/vite-plugin": "^2.17.0",
@@ -59,6 +59,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.8.2",
     "react-use": "^17.5.0",
@@ -68,6 +69,7 @@
     "tailwind-merge": "^2.3.0",
     "usehooks-ts": "^3.1.0",
     "vaul": "^0.9.0",
+    "yn": "^5.0.0",
     "zod": "^3.23.5"
   },
   "devDependencies": {
@@ -77,7 +79,7 @@
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.0",
-    "@remix-run/dev": "^2.8.0",
+    "@remix-run/dev": "2.10.1",
     "@remix-run/eslint-config": "^2.8.0",
     "@shopify/hydrogen-codegen": "^0.3.0",
     "@shopify/mini-oxygen": "3.0.6",
